# sparseflow-share

./: .gitignore  README.md  benchmark.py  detection_utils.py  estimate_activity.py  export.py  main.py  pyproject.toml  step_module.py
data/: __init__.py  coco_detection.py  transforms.py
models/: __init__.py  axon_hillock.py  model_builder.py  sparse_layers.py  yolov8.yaml  yolov8_sparse.yaml  yolov8_sparse_backbone.yaml  yolov8_sparse_full.yaml  yolov8_sparse_stem.yaml
scripts/: check_dataset.py  check_loss_parity.py  check_pretrained_parity.py  check_pretrained_weights_paths.py  compare_ultralytics_protocol.py  convergence_test_sparse.py  create_pretrained_lightning_checkpoint.py  diagnose_map_gap.py  estimate_effective_macs.py  profile_dense_activations.py  smoke_test.sh  smoke_test_sparse.sh  smoke_test_sparse_assertions.py
